<resources>
    <string name="app_name">Aadhaar India</string>
    <string name="action_ok">OK</string>
    <string name="action_apply_for_job">Apply for a Job </string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_password">Password</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_log_in">Log In</string>
    <string name="hint_reset_password">Reset your Password</string>
    <string name="hint_forgot_password_login"><u>Forgot Password</u></string>
    <string name="hint_new_password">New Password - 6 Digit</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_next">Next</string>
    <string name="hint_forgot_password">Forgot Password? Enter Mobile number</string>
    <string name="action_send_link">Send Link</string>
    <string name="hint_registered_mobile_number">Registered Mobile Number</string>
    <string name="hint_password_reset_link">Password Resent Link Sent</string>
    <string name="hint_password_reset_message_1">We\’ve sent you a password reset link on your
        registered mobile number +91 9182381231. </string>
    <string name="hint_password_reset_message_2">Click on the link to Reset a new password.
        Once the password is set, try logging in again.  </string>
    <string name="action_back_to_login">Back to Login</string>
    <string name="pre_mobile">+91</string>
    <string name="hint_wrong_number">Wrong Number? <u>Change Number</u></string>
    <string name="hint_did_not_receive">Didn\'t Receive Link? <u>Resend Link</u></string>
    <string name="hint_search_village">Search</string>
    <string name="action_continue">Continue</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>
    <string name="hint_get_members_in_center"><u>Get groups in this center</u></string>
    <string name="hint_go_to_house_visit"><u>Go to House Visit</u></string>
    <string name="hint_house_visit">House Visit</string>
    <string name="action_logout">Logout</string>
    <string name="action_go_to_center_creation">Create Center</string>
    <string name="error_invalid_email_id">Invalid email address</string>
    <string name="error_invalid_pwd">Password should be of min 6 digits</string>
    <string name="error_invalid_aadhar">Aadhaar no should be of min 12 digits</string>
    <string name="error_invalid_address">Address should be of min 10 characters</string>
    <string name="error_invalid_zip_code">Zip code contains 6 numbers</string>
    <string name="error_invalid_otp">OTP contains 6 numbers</string>
    <string name="error_invalid_mobile">Not Valid number</string>
    <string name="error_invalid_pan">Not Valid PAN number</string>
    <string name="field_required">Field Required</string>
    <string name="error_api_failure">Something went wrong, please try after sometime or contact admin</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="loading">Loading please wait...</string>
    <string name="error_invalid_c_pwd">Password and Confirm password don\'t match</string>
    <string name="hint_document_rejected">Document Rejected.Upload Again.</string>
    <string name="hint_document_missing">Document Missing. Upload Again.</string>
    <string name="hint_user_phone">Phone Number</string>
    <string name="hint_user_aadhar">Aadhaar Number</string>
    <string name="hint_user_dob">Date of Birth</string>
    <string name="hint_user_gender">Gender</string>
    <string name="hint_user_center_address">Center Address</string>
    <string name="hint_create_new_center">Create New Center</string>
    <string name="hint_create_contact_person">Center Contact Person</string>
    <string name="hint_aadhar_number">Aadhaar Number</string>
    <string name="hint_contact_person">Contact Person</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_day">Day</string>
    <string name="hint_month">Month</string>
    <string name="hint_year">Year</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_aadhar_co">Care of in  Aadhaar Card</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_relation">Relation as on Aadhaar Card</string>
    <string name="hint_center_address">Center Address</string>
    <string name="hint_address">Address</string>
    <string name="hint_address_line_1">Address</string>
    <string name="hint_address_line_2">Address Line 2 (Optional)</string>
    <string name="hint_city">Village / Town / City</string>
    <string name="hint_pin_code">Pin Code</string>
    <string name="hint_district">District</string>
    <string name="hint_state">State</string>
    <string name="hint_task_number_of_members">Number of Members</string>
    <string name="hint_task_center_detail">Center Address</string>
    <string name="hint_relation_as_on_aadhar">Relation as on Aadhaar Card</string>
    <string name="hint_center_photos">Center Photos</string>
    <string name="hint_contact_person_photo">Contact Person Photo</string>
    <string name="action_submit">Submit</string>
    <string name="hint_new_center_scan">New Center in</string>
    <string name="hint_aadhar_scan">Aadhaar Number - Center Contact Person</string>
    <string name="action_create_group">Create Group in this Center</string>
    <string name="hint_create">Create</string>
    <string name="action_create_center">Create Center</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="selector_folder_all">All Images</string>
    <string name="selector_caption">Select Images</string>
    <string name="selector_action_done">Done (%1$d/%2$d)</string>
    <string name="selector_preview">Preview</string>
    <string name="selector_reach_max_image_hint">You have selected %d images already!</string>
    <string name="tip_take_photo">Take Photo</string>
    <string name="msg_no_camera">Can\'t Launch Camera!</string>
    <string name="camera_temp_file_error">Temp File Error!</string>
    <string name="selector_permission_error">Permission rejected，failed to work properly！</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="title_choose">Choose</string>
    <string name="cancel_button">Cancel</string>
    <string name="back_button">Back</string>
    <string name="done_button">Done</string>
    <string name="hint_select_center">Select Center</string>
    <string name="hint_add_members">Add Members</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="hint_applicant">Applicant</string>
    <string name="hint_co_applicant">Co-Applicant &amp; Family</string>
    <string name="hint_income">Income</string>
    <string name="hint_expenses">Expenses</string>
    <string name="hint_signing">Signing</string>
    <string name="hint_customer_details">Customer Details</string>
    <string name="hint_credit_check_report">Credit Check Report</string>
    <string name="hint_emi_calculator">EMI Calculator</string>
    <string name="hint_loan_details">Loan Details</string>
    <string name="hint_documents">Documents</string>
    <string name="hint_create_new_customer">Add New Customer</string>
    <string name="hint_new_member_scan">New Member in</string>
    <string name="hint_loan_status">Loan Status</string>
    <string name="hint_outstanding_balance">Outstanding Balance</string>
    <string name="hint_overdue_amount">Overdue Amount</string>
    <string name="hint_customer_rating">Customer Rating</string>
    <string name="hint_rejection_reason">Reason</string>
    <string name="hint_reason">Reason</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_reject_applicant"><u>Reject Applicant</u></string>
    <string name="hint_name">Name</string>
    <string name="hint_rating">Rating</string>
    <string name="hint_pan_no">PAN Number</string>
    <string name="hint_voter_id">Voter ID</string>
    <string name="hint_customer_address">Customer Address</string>
    <string name="hint_alternate_address">Same as Aadhaar Card? </string>
    <string name="hint_past_due_accounts">Past Due Accounts</string>
    <string name="hint_past_due_amount">Past Due Amount</string>
    <string name="hint_written_off_amount">Written Off Amount</string>
    <string name="hint_credit_score">Credit Score</string>
    <string name="hint_dpd_count">DPD Count</string>
    <string name="hint_latest_dpd_count">Latest DPD Count</string>
    <string name="hint_credit_profile_satisfactory">Credit Profile is satisfactory</string>
    <string name="hint_credit_profile_unsatisfactory">Credit Profile is unsatisfactory</string>
    <string name="action_reject_application">Reject Application</string>
    <string name="hint_repeat_customer">Repeat Customer</string>
    <string name="hint_loan_cycle">Loan Cycle</string>
    <string name="hint_loan_amount">Loan Amount</string>
    <string name="hint_loan_tenure">Loan Tenure(months)</string>
    <string name="hint_approx_emi_amount">Approx. EMI Amount</string>
    <string name="action_apply_loan">Apply Loan</string>
    <string name="hint_loan_reason">Loan Reason</string>
    <string name="hint_select_reason">Select Reason</string>
    <string name="hint_loan_description">Loan Description</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_contact_details">Contact Details</string>
    <string name="hint_primary_number">Mobile Number 1</string>
    <string name="hint_secondary_number">Mobile Number 2</string>
    <string name="hint_land_line">Landline Number</string>
    <string name="hint_about">About</string>
    <string name="hint_marital_status">Marital Status</string>
    <string name="hint_caste">Caste</string>
    <string name="hint_religion">Religion</string>
    <string name="hint_ration_card_type">Ration Card Type</string>
    <string name="hint_preferred_language">Preferred Language</string>
    <string name="hint_applicant_profile_pic">Applicant Profile Pic</string>
    <string name="hint_coapplicant_profile_pic">Co-Applicant Profile Pic</string>
    <string name="hint_bank_detail">Bank Detail(First Page)</string>
    <string name="hint_document_not_available"> - Document not Available</string>
    <string name="hint_one_year_bank_statement">1 Year Bank Statement</string>
    <string name="hint_aadhar_card_front">Aadhaar Card Front</string>
    <string name="hint_income_amount">Income Amount</string>
    <string name="hint_cash_flow">Cash Flow</string>
    <string name="hint_fixed">Fixed</string>
    <string name="hint_variable">Variable</string>
    <string name="hint_primary_job">Job</string>
    <string name="hint_remove_job">-Remove this Job</string>
    <string name="hint_yes">Yes</string>
    <string name="hint_no">No</string>
    <string name="hint_alternate_income">Alternate Income</string>
    <string name="hint_another_alternate_income">+ Add Another Alternate Income</string>
</resources>