<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginandforgot.ForgotPasswordSuccessActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include android:id="@+id/action_bar_layout" layout="@layout/common_action_bar_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/action_bar_layout"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_padding"
            >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordered_bg"
                android:orientation="vertical"
                android:padding="20dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/check_circle"
                    android:layout_gravity="center"
                    android:layout_marginBottom="18dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/MyFormHeadingTextView"
                    android:text="@string/hint_password_reset_link"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/message_text_response"
                    style="@style/MyFormHeadingMessageTextView"
                    android:text="@string/hint_password_reset_message_1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/MyFormHeadingMessageTextView"
                    android:text="@string/hint_password_reset_message_2"
                    />










            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/MyBlueTextView"
                android:id="@+id/change_number"
                android:layout_marginTop="24dp"
                android:text="@string/hint_wrong_number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/MyBlueTextView"
                android:id="@+id/resend_link"
                android:layout_marginTop="24dp"
                android:text="@string/hint_did_not_receive"
                />



        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            style="@style/MyBlueButton"
            android:layout_alignParentBottom="true"
            android:id="@+id/back_to_login_button"
            android:text="@string/action_back_to_login"
            android:layout_margin="@dimen/margin_padding"


            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>