<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginandforgot.ResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <include android:id="@+id/action_bar_layout" layout="@layout/common_action_bar_layout"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar_layout"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_padding"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_reset_password"
            style="@style/MyHeadingTextView"
            android:layout_marginBottom="8dp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_bg"
            android:orientation="vertical"
            android:padding="12dp"

            >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_new_password"
                style="@style/MyEditTextTitle"
                android:layout_marginTop="12dp"
                />

            <com.mukesh.OtpView
                android:id="@+id/new_password_otp_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                app:itemCount="6"
                app:itemWidth="40dp"
                app:itemSpacing="10dp"
                style="@style/MyOTPET"
                app:lineColor="@drawable/edit_text_selector"
                app:viewType="line"
                app:cursorColor="@color/primaryTextColor"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                style="@style/MyEditTextTitle"
                android:textColor="@color/errorColor"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="12dp"
                android:id="@+id/new_password_error_tv"
             android:visibility="gone"

                />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/hint_confirm_password"
                style="@style/MyEditTextTitle"
                />

            <com.mukesh.OtpView
                android:id="@+id/confirm_password_otp_view"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                style="@style/MyOTPET"
                app:lineColor="@drawable/edit_text_selector"
                app:itemCount="6"
                app:viewType="line"
                app:itemWidth="40dp"
                app:itemSpacing="10dp"
                app:cursorColor="@color/primaryTextColor"
                />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                style="@style/MyEditTextTitle"
                android:textColor="@color/errorColor"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="12dp"
                android:visibility="gone"
                android:id="@+id/confirm_password_error_tv"
                android:text="jsjsjsj"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:visibility="invisible"
                />

        </LinearLayout>





    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            style="@style/MyBlueButton"
            android:id="@+id/next_button"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_padding"
            android:text="@string/action_next"
            android:layout_marginTop="24dp"


            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
